feat: Pocket ID

--- a/roles/manager_setup_config/templates/config/grafana/app.env
+++ b/roles/manager_setup_config/templates/config/grafana/app.env
@@ -1,2 +1,2 @@
-GF_AUTH_GENERIC_OAUTH_CLIENT_ID="{{ authentik.oidc.grafana.clientId }}"
-GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET="{{ authentik.oidc.grafana.clientSecret }}"
+GF_AUTH_GENERIC_OAUTH_CLIENT_ID="{{ pocketId.oidc.grafana.clientId }}"
+GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET="{{ pocketId.oidc.grafana.clientSecret }}"
