feat: add MAXMIND_LICENSE_KEY

--- a/roles/manager_setup_config/templates/config/pocket-id/app.env
+++ b/roles/manager_setup_config/templates/config/pocket-id/app.env
@@ -1,3 +1,4 @@
 APP_URL="{{ pocketId.appUrl }}"
 ENCRYPTION_KEY="{{ pocketId.encryptionKey }}"
+MAXMIND_LICENSE_KEY="{{ pocketId.maxmindLicenseKey }}"
 TRUST_PROXY=true
