--- a/roles/manager_setup_data/vars/main.yml
+++ b/roles/manager_setup_data/vars/main.yml
@@ -1,2 +1,2 @@
 ---
-manager_setup_data_backup_file: "{{ backup.mount_dir }}/{{ inventory_hostname }}/backup-home-1.tar.gz"
+manager_setup_data_backup_file: "{{ backup.mountDir }}/{{ inventory_hostname }}/backup-home-1.tar.gz"
