--- a/roles/manager_setup_config/templates/config/common/storage.env
+++ b/roles/manager_setup_config/templates/config/common/storage.env
@@ -1,3 +1,3 @@
 STORAGE_SSD1=/dev/sda
-BACKUP_DIR="{{ backup.mount_dir }}/{{ inventory_hostname }}"
+BACKUP_DIR="{{ backup.mountDir }}/{{ inventory_hostname }}"
 MAX_BACKUPS_HOME=14
